--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-      <section>
+      <section class="padding-block-900">
         <div class="container">
           <div class="even-columns">
             <div>
@@ -56,7 +56,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="padding-block-900">
         <div class="container">
           <div class="even-columns">
             <div>
@@ -105,12 +105,12 @@
         </div>
       </section>
 
-      <section class="carousel">
+      <section class="carousel padding-block-700">
         <h2 class="fs-secondary-heading fw-bold">What they’ve said</h2>
         <button class="button">Get Started</button>
       </section>
 
-      <section class="cta bg-primary-400 text-neutral-100">
+      <section class="cta bg-primary-400 text-neutral-100 padding-block-700">
         <div class="container">
           <div class="even-columns">
             <div>
@@ -127,7 +127,7 @@
       </section>
     </main>
 
-    <footer class="bg-neutral-900 text-neutral-100">
+    <footer class="bg-neutral-900 text-neutral-100 padding-block-700">
       <div class="container">
         <div class="even-columns">
           <div>
