--- a/index.html
+++ b/index.html
@@ -143,15 +143,17 @@
 
       <section class="cta bg-primary-400 text-neutral-100 padding-block-700">
         <div class="container">
-          <div class="even-columns">
+          <div class="even-columns vertical-align-center">
             <div>
-              <p class="fs-secondary-heading fw-bold">
+              <p class="fs-primary-heading fw-bold">
                 Simplify how your team works today.
               </p>
             </div>
 
-            <div>
-              <button class="button" data-type="inverted">Get Started</button>
+            <div class="justify-self-end-md">
+              <button class="button push-right" data-type="inverted">
+                Get Started
+              </button>
             </div>
           </div>
         </div>
