--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
         <button class="button">Get Started</button>
       </section>
 
-      <section class="cta bg-primary-400 text-neutral-100 padding-block-700">
+      <section
+        class="cta bg-primary-400 text-neutral-100 margin-top-900 padding-block-900"
+      >
         <div class="container">
           <div class="even-columns vertical-align-center">
             <div>
@@ -227,64 +229,56 @@
       class="primary-footer bg-neutral-900 text-neutral-100 padding-block-700"
     >
       <div class="container">
-        <div class="primary-footer-wrapper">
-          <div class="primary-footer-logo-social">
-            <a href="#" aria-label="home">
-              <svg class="logo" width="146" height="24">
-                <use xlink:href="images/logo-smb.svg#logo"></use>
-              </svg>
-            </a>
+        <div class="primary-footer__wrapper">
+          <a class="primary-footer__logo" href="#" aria-label="home">
+            <svg class="logo" width="146" height="24">
+              <use xlink:href="images/logo-smb.svg#logo"></use>
+            </svg>
+          </a>
 
-            <ul class="social-list" role="list" aria-label="social links">
-              <li>
-                <a aria-label="facebook" href="#">
-                  <svg class="social-icon">
-                    <use
-                      xlink:href="images/social-icons.svg#icon-facebook"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a aria-label="youtube" href="#">
-                  <svg class="social-icon">
-                    <use
-                      xlink:href="images/social-icons.svg#icon-youtube"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a aria-label="twitter" href="#">
-                  <svg class="social-icon">
-                    <use
-                      xlink:href="images/social-icons.svg#icon-twitter"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a aria-label="pinterest" href="#">
-                  <svg class="social-icon">
-                    <use
-                      xlink:href="images/social-icons.svg#icon-pinterest"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a aria-label="instagram" href="#">
-                  <svg class="social-icon">
-                    <use
-                      xlink:href="images/social-icons.svg#icon-instagram"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="social-list" role="list" aria-label="social links">
+            <li>
+              <a aria-label="facebook" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a aria-label="youtube" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-youtube"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a aria-label="twitter" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a aria-label="pinterest" href="#">
+                <svg class="social-icon">
+                  <use
+                    xlink:href="images/social-icons.svg#icon-pinterest"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a aria-label="instagram" href="#">
+                <svg class="social-icon">
+                  <use
+                    xlink:href="images/social-icons.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
 
-          <div class="primary-footer-nav">
+          <div class="primary-footer__nav-wrapper">
             <nav class="footer-nav">
               <ul
                 class="flow"
@@ -303,13 +297,14 @@
             </nav>
           </div>
 
-          <div class="primary-footer-form">
-            <form action="">
-              <input type="email" />
-              <button class="button" data-shadow="none">Go</button>
-            </form>
-            <p>Copyright 2020. All Rights Reserved</p>
-          </div>
+          <form class="primary-footer__form" action="">
+            <input type="email" />
+            <button class="button" data-shadow="none">Go</button>
+          </form>
+
+          <p class="primary-footer__copyright">
+            Copyright 2020. All Rights Reserved
+          </p>
         </div>
       </div>
     </footer>
